--- a/FitnessTrackerApp/app/src/main/res/values/strings.xml
+++ b/FitnessTrackerApp/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- Scaffold -->
     <string name="bottom_app_bar_item_1">DASHBOARD</string>
-    <string name="bottom_app_bar_item_2">WORKOUTS</string>
-    <string name="bottom_app_bar_item_3">PROGRESS</string>
+    <string name="bottom_app_bar_item_2">EXERCISES</string>
+    <string name="bottom_app_bar_item_3">NOTES</string>
     <string name="bottom_app_bar_item_4">SETTINGS</string>
 </resources>
