--- a/FitnessTrackerApp/app/src/main/res/values/strings.xml
+++ b/FitnessTrackerApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="bottom_app_bar_item_1">DASHBOARD</string>
     <string name="bottom_app_bar_item_2">CREATE</string>
     <string name="bottom_app_bar_item_3">ALARM</string>
+
+    <!-- Registration -->
+    <string name="email_address_label">Email Address</string>
+    <string name="password_label">Password</string>
+    <string name="password_description_hide">Hide Password</string>
+    <string name="password_description_show">Show Password</string>
+    <string name="password_confirm">Confirm Password</string>
+    <string name="create_account_button">Create account</string>
+    
+    <!-- Dashboard -->
+    <string name="expand_arrow_description">Expand/Collapse Arrow</string>
 </resources>
